# sat_game

./: CMakeLists.txt  CMakePresets.json  README.md
include/: Satellite.h  SatelliteManager.h
src/: Satellite.cpp  SatelliteManager.cpp  main.cpp
